--- a/assets/styles/scss/abstracts/_breakpoints.scss
+++ b/assets/styles/scss/abstracts/_breakpoints.scss
@@ -1,46 +1,48 @@
 @mixin breakpoint($breakpoint) {
-  // #  Extra Small - 20rem - 320px
+  // #  Extra Extra Small: 20rem / 320px
+  @if $breakpoint == xxsm {
+    @media (max-width: $dimension-xxsm) {
+      @content;
+    }
+  }
+  // #  Extra Small: 40rem / 640px
   @if $breakpoint == xsm {
     @media (max-width: $dimension-xsm) {
       @content;
     }
   }
-  // #  Small - 40rem - 640px
-  @if $breakpoint == sm {
+  // #  Small: 60rem / 960px
+  @else if $breakpoint == sm {
     @media (max-width: $dimension-sm) {
       @content;
     }
   }
-  // #  Medium - 60rem - 960px
+  // #  Medium: 80rem / 1280px
   @else if $breakpoint == md {
     @media (max-width: $dimension-md) {
       @content;
     }
   }
-  // #  Large - 80rem - 1280px
+  // #  Large: 100rem / 1600px
   @else if $breakpoint == lg {
     @media (max-width: $dimension-lg) {
       @content;
     }
   }
-  // #  Extra Large - 100rem - 1600px
+  // #  Extra Large: 120rem / 1920px
   @else if $breakpoint == xl {
     @media (max-width: $dimension-xl) {
       @content;
     }
   }
-  // #  Extra Large - 120rem - 1920px
+  // #  Extra Large: 140rem / 2240px
   @else if $breakpoint == xxl {
     @media (max-width: $dimension-xxl) {
       @content;
     }
   }
-  // #  Extra Extra Extra Large - 140rem - 2240px
-  @else if $breakpoint == xxxl {
-    @media (max-width: $dimension-xxxl) {
-      @content;
-    }
-  } @else {
-    @warn "Breakpoint mixin supports: xsm, sm, md, lg, xl, xxl, xxxl";
+  // #  Invalid input!
+  @else {
+    @warn 'Breakpoint mixin supports: xxsm, xsm, sm, md, lg, xl, xxl';
   }
 }
