--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -1,21 +1,21 @@
-/*----------------------------------------------------------------------------*\
+/* -------------------------------------------------------------------------- *\
 // *  _variables.scss: This partial file contains all Scss 'variables'.
-\*----------------------------------------------------------------------------*/
+\* -------------------------------------------------------------------------- */
 
 // # <=======| Font-weight |=======>
 $font-weight-text: 400; // Normal
 $font-weight-heading: 700; // Bold
 
 // # <=======| Padding and margin sizes |=======>
-$size-XS: 0.25rem; // 4px
-$size-S: 0.5rem; // 8px
-$size-M: 1rem; // 16px
-$size-L: 1.5rem; // 24px
-$size-2XL: 2rem; // 32px
-$size-3XL: 3rem; // 48px
-$size-4XL: 4rem; // 64px
+$size-xxsm: 0.25rem; // 4px
+$size-xsm: 0.5rem; // 8px
+$size-sm: 1rem; // 16px
+$size-md: 1.5rem; // 24px
+$size-lg: 2rem; // 32px
+$size-xl: 3rem; // 48px
+$size-xxl: 4rem; // 64px
 
-// # <=======| dimensions |=======>
+// # <=======| Dimension sizes |=======>
 $dimension-xxsm: 20rem; // 320px
 $dimension-xsm: 40rem; // 640px
 $dimension-sm: 60rem; // 960px
@@ -25,5 +25,4 @@ $dimension-xl: 120rem; // 1920px
 $dimension-xxl: 140rem; // 2240px
 
 // # <=======| Other sizes |=======>
-
 $max-width: $dimension-xxl;
