--- a/assets/styles/scss/abstracts/_breakpoints.scss
+++ b/assets/styles/scss/abstracts/_breakpoints.scss
@@ -35,7 +35,7 @@
       @content;
     }
   }
-  // #  Extra Large: 140rem / 2240px
+  // #  Extra Extra Large: 140rem / 2240px
   @else if $breakpoint == xxl {
     @media (max-width: $dimension-xxl) {
       @content;
